src/base/Icon/Icon.scss
.cui-icon-fixed-width {
	width: 16px;
}

.cui-icon-svg {
  fill: currentColor;
  vertical-align: sub;
}

.svg-close {
  width: 14px;
  height: 14px;
	text-shadow: -1px 0px;
}

.svg-folder-shared {
	width: 14px;
	height: 21px;
}

